Add spdlog example

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,4 +7,5 @@ include_directories(src)
 
 add_subdirectory(src)
 add_subdirectory(test)
+add_subdirectory(lib/spdlog)
 add_subdirectory(lib/googletest)
