--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -5,3 +5,6 @@ set(SOURCES main.cpp Forumla.cpp)
 add_executable(${BINARY} ${SOURCES})
 
 add_library(${BINARY}_lib STATIC ${SOURCES})
+
+target_link_libraries(${BINARY} spdlog)
+target_link_libraries(${BINARY}_lib spdlog)
