--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,7 +7,7 @@ set(CMAKE_PROJECT_VERSION 1.0.0)
 include_directories(${CMAKE_CURRENT_BINARY_DIR}/conf)
 add_subdirectory(conf)
 
-include_directories(src)
+include_directories(include)
 add_subdirectory(src)
 
 add_subdirectory(lib/spdlog)
