--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,11 +4,11 @@ project(Voltra)
 set(CMAKE_CXX_STANDARD 14)
 set(CMAKE_PROJECT_VERSION 1.0.0)
 
-include_directories(${CMAKE_CURRENT_BINARY_DIR}/conf)
 add_subdirectory(conf)
 
-include_directories(include)
 add_subdirectory(src)
+target_include_directories(${PROJECT_NAME} PUBLIC include)
+target_include_directories(${PROJECT_NAME} PUBLIC ${CMAKE_CURRENT_BINARY_DIR}/conf)
 
 add_subdirectory(lib/spdlog)
 
