--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,10 +1,10 @@
-set(BINARY ${CMAKE_PROJECT_NAME})
+set(BINARY ${PROJECT_NAME})
 
 set(SOURCES main.cpp Forumla.cpp)
 
-add_executable(${BINARY} ${SOURCES})
-
-add_library(${BINARY}_lib STATIC ${SOURCES})
-
+add_library(${BINARY} STATIC ${SOURCES})
 target_link_libraries(${BINARY} spdlog)
-target_link_libraries(${BINARY}_lib spdlog)
+
+add_executable(${BINARY}_run ${SOURCES})
+target_link_libraries(${BINARY}_run ${BINARY})
+target_link_libraries(${BINARY}_run spdlog)
