--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,4 +1,4 @@
-set(BINARY ${CMAKE_PROJECT_NAME}_test)
+set(BINARY ${PROJECT_NAME}_test)
 
 set(TEST_SOURCES main_test.cpp Formula_test.cpp Environment_test.cpp)
 
@@ -6,4 +6,4 @@ add_executable(${BINARY} ${TEST_SOURCES})
 
 add_test(NAME ${BINARY} COMMAND ${BINARY})
 
-target_link_libraries(${BINARY} PUBLIC ${CMAKE_PROJECT_NAME}_lib gtest)
+target_link_libraries(${BINARY} PUBLIC ${PROJECT_NAME} gtest)
