--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,8 +1,10 @@
 set(BINARY ${PROJECT_NAME}_test)
 
-set(TEST_SOURCES main_test.cpp Formula_test.cpp Environment_test.cpp)
-
-add_executable(${BINARY} ${TEST_SOURCES})
+file(GLOB SOURCES
+     "*.h"
+     "*.cpp"
+)
+add_executable(${BINARY} ${SOURCES})
 
 add_test(NAME ${BINARY} COMMAND ${BINARY})
 
