--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,9 +1,11 @@
-set(BINARY ${CMAKE_PROJECT_NAME}_test)
+set(BINARY ${PROJECT_NAME}_test)
 
-set(TEST_SOURCES main_test.cpp Formula_test.cpp Environment_test.cpp)
-
-add_executable(${BINARY} ${TEST_SOURCES})
+file(GLOB SOURCES
+     "*.h"
+     "*.cpp"
+)
+add_executable(${BINARY} ${SOURCES})
 
 add_test(NAME ${BINARY} COMMAND ${BINARY})
 
-target_link_libraries(${BINARY} PUBLIC ${CMAKE_PROJECT_NAME}_lib gtest)
+target_link_libraries(${BINARY} PUBLIC ${PROJECT_NAME} gtest)
