Add BUILD_TESTS option

--- a/conf/Environment.h.in
+++ b/conf/Environment.h.in
@@ -3,5 +3,7 @@
 
 #cmakedefine CMAKE_PROJECT_VERSION "@CMAKE_PROJECT_VERSION@"
 #cmakedefine CMAKE_PROJECT_NAME "@CMAKE_PROJECT_NAME@"
+#cmakedefine PROJECT_VERSION "@PROJECT_VERSION@"
+#cmakedefine PROJECT_NAME "@PROJECT_NAME@"
 
 #endif
