Add executable option

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,6 +8,11 @@ if(NOT CMAKE_BUILD_TYPE)
   set(CMAKE_BUILD_TYPE "Debug") # Default to 'Debug'
 endif()
 
+set(LIBRARY_NAME ${PROJECT_NAME})
+set(EXECUTABLE_NAME ${PROJECT_NAME}_run)
+set(TEST_NAME ${PROJECT_NAME}_test)
+option(BUILD_EXECUTABLE "Build an executable in addition to the static lib" ON)
+
 if (${CMAKE_BUILD_TYPE} STREQUAL "Debug")
   option(BUILD_TESTS "Add gtest to build" ON)
 endif ()
@@ -18,8 +23,6 @@ endif ()
 add_subdirectory(conf)
 
 add_subdirectory(src)
-target_include_directories(${PROJECT_NAME} PUBLIC include)
-target_include_directories(${PROJECT_NAME} PUBLIC ${CMAKE_CURRENT_BINARY_DIR}/conf)
 
 add_subdirectory(lib/spdlog)
 
