--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,11 +1,9 @@
-set(BINARY ${PROJECT_NAME}_test)
-
 file(GLOB SOURCES
      "*.h"
      "*.cpp"
 )
-add_executable(${BINARY} ${SOURCES})
+add_executable(${TEST_NAME} ${SOURCES})
 
-add_test(NAME ${BINARY} COMMAND ${BINARY})
+add_test(NAME ${TEST_NAME} COMMAND ${TEST_NAME})
 
-target_link_libraries(${BINARY} PUBLIC ${PROJECT_NAME} gtest)
+target_link_libraries(${TEST_NAME} PUBLIC ${LIBRARY_NAME} gtest)
